Add markdown descriptions

--- a/examples/example_usecase_stats.ipynb
+++ b/examples/example_usecase_stats.ipynb
@@ -1,8 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Surforama -- Example statistic computations \n",
+    "\n",
+    "This example notebook uses the .obj meshes and .star files generated from particle clicking in Surforama to compute some simple statistics:\n",
+    "- Mesh occupancy: What is the particle density on the surface? (computed as #points / area)\n",
+    "- Geodesic nearest neighbor distance: What is the distribution of nearest neighbor distances on the surface?\n",
+    "- Orientation comparison between nearest neighbors: Is there any relation between in-plane orientations of nearest neighbors on the surface? (computed for 1- and 2-nearest neighbors)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
